src/main/resources/testsuite/valid/simple1-signed-rsa.trig
@prefix this: <http://example.org/nanopub-validator-example/RAsfLND-jtohcyohjKmXL7H4KYEDMLr0g4Yc6-8ATwb10> .
@prefix sub: <http://example.org/nanopub-validator-example/RAsfLND-jtohcyohjKmXL7H4KYEDMLr0g4Yc6-8ATwb10#> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix dc: <http://purl.org/dc/terms/> .
@prefix pav: <http://purl.org/pav/> .
@prefix prov: <http://www.w3.org/ns/prov#> .
@prefix np: <http://www.nanopub.org/nschema#> .
@prefix npx: <http://purl.org/nanopub/x/> .
@prefix ex: <http://example.org/> .

sub:Head {
	this: np:hasAssertion sub:assertion ;
		np:hasProvenance sub:provenance ;
		np:hasPublicationInfo sub:pubinfo ;
		a np:Nanopublication .
}

sub:assertion {
	ex:mosquito ex:transmits ex:malaria .
}

sub:provenance {
	sub:assertion prov:hadPrimarySource <http://dx.doi.org/10.3233/ISU-2010-0613> .
}

sub:pubinfo {
	sub:signature npx:hasAlgorithm "RSA" ;
		npx:hasPublicKey "MIGfMA0GCSqGSIb3DQEBAQUAA4GNADCBiQKBgQCwUtewGCpT5vIfXYE1bmf/Uqu1ojqnWdYxv+ySO80ul8Gu7m8KoyPAwuvaPj0lvPtHrg000qMmkxzKhYknEjq8v7EerxZNYp5B3/3+5ZpuWOYAs78UnQVjbHSmDdmryr4D4VvvNIiUmd0yxci47dTFUj4DvfHnGd6hVe5+goqdcwIDAQAB" ;
		npx:hasSignature "OC0xJTavw9h/JSZIZl/NLzEZqQk1E7XWV3o1btD1cojxf9FMtgZuMMOtnPcgydRn3gK0wbUh+ATV4sEFdG51khsrOOH7+RylqnaE9XD4L65dwPZ/PpI32/LMYsQ62rsb0ajWtXr5cKDIKaoah0U1V85XlLGhoEyzrLZCU5uqJbo=" ;
		npx:hasSignatureTarget this: .
	
	this: dc:created "2014-07-24T18:05:11+01:00"^^xsd:dateTime ;
		pav:createdBy <http://orcid.org/0000-0002-1267-0234> ;
		a npx:ExampleNanopub .
}
