src/main/resources/testsuite/invalid/valid_invalid1.trig
@prefix : <http://example.org/mynanopub1#> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix dc: <http://purl.org/dc/terms/> .
@prefix pav: <http://purl.org/pav/> .
@prefix prov: <http://www.w3.org/ns/prov#> .
@prefix np: <http://www.nanopub.org/nschema#> .
@prefix ex: <http://example.org/> .

:Head {
    : a np:Nanopublication ; np:hasAssertion :assertion ;
        np:hasProvenance :provenance ; np:hasPublicationInfo :pubinfo .
}
:assertion {
    ex:mosquito ex:transmits ex:malaria .
}
:provenance {
    :assertion prov:wasDerivedFrom <http://dx.doi.org/10.3233/ISU-2010-0613> .
}
:pubinfo {
    : pav:createdBy <http://orcid.org/0000-0002-1267-0234> .
    : dc:created "2014-07-09T13:54:11+01:00"^^xsd:dateTime .
}


@prefix : <http://example.org/mynanopub2#> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix dc: <http://purl.org/dc/terms/> .
@prefix pav: <http://purl.org/pav/> .
@prefix prov: <http://www.w3.org/ns/prov#> .
@prefix np: <http://www.nanopub.org/nschema#> .
@prefix ex: <http://example.org/> .

:Head {
    : a np:Nanopublication ; np:hasAssertion :assertion ;
        np:hasProvenance :provenance ; np:hasPublicationInfo :pubinfo .
}
:assertion {
    ex:Gene1 ex:isRealtedTo ex:malaria .
}
:provenance {
    :assertion prov:wasDerivedFrom <http://dx.doi.org/10.3233/ISU-2010-0613> .
}
:pubinfo {
    : pav:createdBy <http://orcid.org/0000-0002-1267-0234> .
    : dc:created "2014-07-09T13:54:11+01:00"^^xsd:dateTime .
}


@prefix : <http://example.org/mynanopub3#> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix dc: <http://purl.org/dc/terms/> .
@prefix pav: <http://purl.org/pav/> .
@prefix prov: <http://www.w3.org/ns/prov#> .
@prefix np: <http://www.nanopub.org/nschema#> .
@prefix ex: <http://example.org/> .

:Head {
    : a np:Nanopublication ;
        np:hasProvenance :provenance ; np:hasPublicationInfo :pubinfo .
}
:provenance {
    :assertion prov:wasDerivedFrom <http://dx.doi.org/10.3233/ISU-2010-0613> .
}
:pubinfo {
    : pav:createdBy <http://orcid.org/0000-0002-1267-0234> .
    : dc:created "2014-07-09T13:54:11+01:00"^^xsd:dateTime .
}
